<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/fondo"
    android:padding="20dp">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="10dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/fondo2"
        android:padding="20dp"
        android:layout_marginHorizontal="10dp">


        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/usuario_o_correo"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_marginBottom="25dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCrearUsuario"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/crear_usuario"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/ingresar"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>