<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginBottom="16dp">

            <ImageButton
                android:id="@+id/btnInfo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@android:drawable/ic_dialog_info"
                android:background="@color/fondo3"
                android:contentDescription="@string/informaci_n"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/fondo2"
            android:padding="24dp">


            <EditText
                android:id="@+id/etUsuario"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/usuario"
                android:textColorHint="@color/letras2"
                android:textColor="@color/black"
                android:background="@android:color/white"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:inputType="text"/>

            <!-- Campo Correo -->
            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/correo"
                android:textColorHint="@color/letras2"
                android:textColor="@color/black"
                android:background="@android:color/white"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:inputType="textEmailAddress"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp">

                <EditText
                    android:id="@+id/etEdad"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/edad"
                    android:textColorHint="@color/letras2"
                    android:textColor="@color/black"
                    android:background="@android:color/white"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:inputType="number"/>

                <Button
                    android:id="@+id/btnFechaNacimiento"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="@string/fecha_de_nacimiento"
                    android:textSize="11sp"
                    android:textColor="@color/letras2"
                    android:backgroundTint="@android:color/white"
                    android:gravity="center_vertical|start"
                    android:paddingStart="12dp"/>
            </LinearLayout>

            <!-- Tipo de diabetes spinner -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerTipoDiabetes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:prompt="Tipo de diabetes"
                    android:popupBackground="@android:color/white"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/tel_fono"
                android:textColorHint="@color/letras2"
                android:textColor="@color/black"
                android:background="@color/white"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:inputType="phone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cancelar"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:strokeColor="@color/white"/>

                <Button
                    android:id="@+id/btnIngresar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:text="@string/ingresar"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/fondo"
            android:padding="16dp"
            android:orientation="vertical"
            android:visibility="gone">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="16dp">

                <NumberPicker
                    android:id="@+id/npAnio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icono"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"/>

                <NumberPicker
                    android:id="@+id/npMes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icono"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"/>

                <NumberPicker
                    android:id="@+id/npDia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancelarFecha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cancelar"
                    android:textColor="@color/black"
                    android:backgroundTint="@android:color/white"/>

                <Button
                    android:id="@+id/btnGuardarFecha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:text="@string/guardar"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/black"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>